# hydro-fetch

./: .copier-answers.yml  CLAUDE.md  README.md  architecture.md  environment.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
_old_code_to_refactor/hpc/: __directories.sh  __utils.py  _da2_resampling_to_same_tstep.py  _da3_qaqc_resampling.py  _da3b_qaqc_preprocessing.py  _da_cmbn_to_dly_ncs_frmtd_for_RainyDay.py  _i_extract_mrms_at_gages.py  c_download_mrms_mesonet.sh  d_download_AORC.sh  da2_resampling_to_same_tstep.sh  da3_deleting_scratch.sh  da3_qaqc_resampling.sh  da3b_qaqc_preprocessing.sh  da_cmbn_to_dly_ncs_frmtd_for_RainyDay.sh  i_extract_mrms_data_at_gages.sh
_old_code_to_refactor/local/: __filepaths.py  a0_qaqc_bias_corrected_mrms_data.py  a2_create_mrms_vs_gage_csv.py
docs/: api.md  index.md  installation.md  usage.md
docs/planning/refactors/2026-03-01_full_codebase_refactor/: full_codebase_refactor.md
docs/planning/refactors/2026-03-01_full_codebase_refactor/work_chunks/: 00_data_source_inventory.md  01A_exceptions_and_constants.md  01B_pydantic_config_model.md  01C_path_management.md  01D_io_layer.md  01E_gis_io.md  01F_test_infrastructure.md  02A_spatial_operations.md  02B_temporal_resampling.md  02C_bias_correction.md  02D_qaqc.md  02E_point_extraction.md  02F_annual_statistics.md  03A_base_download_manager.md  03B_mrms_download.md  03C_mrms_legacy_download.md  03D_aorc_download.md  04A_snakemake_rules.md  04B_run_modes.md  04C_snakemake_profiles.md  04D_cli_entry_point.md  05A_product_comparison.md  (+5 more)
src/hydro_fetch/: __init__.py
