[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydro-fetch"
version = "0.1.0"
description = "Retrieve and process hydrologic datasets including MRMS radar rainfall and AORC precipitation data"
authors = [
    {name = "Daniel Lassiter", email = "daniel.lassiter@outlook.com"},
]
requires-python = ">= 3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", "build", "dist", "*.egg-info"]
